| Bug #60082 | Failed CREATE USER statement written to binary log | ||
|---|---|---|---|
| Submitted: | 10 Feb 2011 10:35 | Modified: | 24 Mar 2011 15:21 |
| Reporter: | Libing Song | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Replication | Severity: | S3 (Non-critical) |
| Version: | 5.5 | OS: | Any |
| Assigned to: | CPU Architecture: | Any | |
[10 Feb 2011 10:35]
Libing Song
[26 Feb 2011 0:15]
Sveta Smirnova
Thank you for the report. Verified as described.
[24 Mar 2011 15:21]
Jon Stephens
Documented fix in the 5.6.3 changelog as follows:
A failed CREATE USER statement was mistakenly written to the
binary log.
Closed.
