Fix for BUG#11827392 (BUG#60082).

Even though the CREATE USER statement fails, it still gets
written to the binary log.

We fix this by setting the flag some_users_created correctly
inside mysql_create_users.